--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -554,32 +554,8 @@ video {
   --tw-contain-style:  ;
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.z-\[999\] {
-  z-index: 999;
-}
-
-.-z-\[999\] {
-  z-index: -999;
-}
-
-.-m-8 {
-  margin: -2rem;
-}
-
 .-m-4 {
   margin: -1rem;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
@@ -598,26 +574,16 @@ video {
   height: 100vh;
 }
 
-.h-full {
-  height: 100%;
+.w-32 {
+  width: 8rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -636,24 +602,12 @@ video {
   justify-content: center;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
 
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-3xl {
@@ -673,10 +627,6 @@ video {
   border-color: rgb(51 65 85 / var(--tw-border-opacity));
 }
 
-.bg-black\/25 {
-  background-color: rgb(0 0 0 / 0.25);
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -690,14 +640,14 @@ video {
   font-weight: 700;
 }
 
-.text-slate-400 {
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -721,10 +671,6 @@ h1 {
 
 h2 {
   font-size: 1.5rem
-}
-
-.\*\:-m-2 > * {
-  margin: -0.5rem;
 }
 
 .\*\:-m-1 > * {
