--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -7,5 +7,21 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5rem
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+
+label {
+    color: gray
+}
+
+select {
+    margin-top: 0.5rem;
+    font-size: 1.25rem;
+    background-color: rgb(211, 255, 249)
+
 }
