--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -558,6 +558,10 @@ video {
   margin: -1rem;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .flex {
   display: flex;
 }
@@ -566,8 +570,16 @@ video {
   display: none;
 }
 
+.h-2\/5 {
+  height: 40%;
+}
+
 .h-3\/5 {
   height: 60%;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -586,6 +598,10 @@ video {
   cursor: pointer;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -600,6 +616,10 @@ video {
 
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-2 {
@@ -630,6 +650,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-8 {
@@ -670,7 +694,22 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5rem
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+label {
+  color: gray
+}
+
+select {
+  margin-top: 0.5rem;
+  font-size: 1.25rem;
+  background-color: rgb(211, 255, 249)
 }
 
 .\*\:-m-1 > * {
