--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -558,8 +558,8 @@ video {
   margin: -1rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .flex {
@@ -570,44 +570,32 @@ video {
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-2\/5 {
   height: 40%;
 }
 
-.h-3\/5 {
-  height: 60%;
+.h-\[50vh\] {
+  height: 50vh;
 }
 
 .h-full {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-\[150\%\] {
-  height: 150%;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
-.h-\[150vh\] {
-  height: 150vh;
+.max-h-full {
+  max-height: 100%;
 }
 
 .w-32 {
   width: 8rem;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-full {
@@ -650,20 +638,8 @@ video {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .rounded-lg {
@@ -683,14 +659,14 @@ video {
   border-color: rgb(51 65 85 / var(--tw-border-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -756,6 +732,11 @@ select {
   margin-top: 0.5rem;
   font-size: 1.25rem;
   background-color: rgb(211, 255, 249)
+}
+
+img {
+  pointer-events: auto;
+  -webkit-user-drag: auto
 }
 
 .\*\:-m-1 > * {
